<resources>
    <string name="app_name">MoviesApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="overview">Overview:</string>
    <string name="release_date">Release Date:</string>
    <string name="rate">Rate:</string>
    <string name="moviesList">Movies List</string>
    <string name="add_to_favorite">Add to Favorites</string>
    <string name="added_favorite">Added to favorite</string>
    <string name="language">Original Language: </string>
    <string name="restricted_content">"Restricted Content: "</string>
    <string name="details">Movie Details</string>
    <string name="no_movies">No movies</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unknown_error">Unknown Error</string>
</resources>