<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="movie"
            type="com.khaledamin.moviesapplication.domain.model.Movie" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1D1D1D"
        android:layout_margin="8dp"
        android:elevation="5dp">

        <ImageView
            android:id="@+id/movie_poster"
            imgUrl="@{movie.posterPath}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="8dp"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:maxLines="2"
            android:text="@{movie.title}"
            android:textColor="@color/silver"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/overview_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/overview"
            android:textColor="@color/silver"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_poster"
            app:layout_constraintTop_toBottomOf="@id/movie_title" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@{movie.overview}"
            android:textColor="@color/deep_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_poster"
            app:layout_constraintTop_toBottomOf="@id/overview_label" />

        <TextView
            android:id="@+id/release_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ellipsize="end"
            android:text="@string/release_date"
            android:textColor="@color/silver"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_poster"
            app:layout_constraintTop_toBottomOf="@id/overview" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@{movie.releaseDate}"
            android:textColor="@color/deep_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_poster"
            app:layout_constraintTop_toBottomOf="@id/release_date_label" />

        <TextView
            android:id="@+id/rate_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/rate"
            android:textColor="@color/silver"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_poster"
            app:layout_constraintTop_toBottomOf="@id/release_date" />

        <TextView
            android:id="@+id/rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ellipsize="end"
            android:text="@{String.valueOf(movie.voteAverage)}"
            android:textColor="@color/deep_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_poster"
            app:layout_constraintTop_toBottomOf="@id/rate_label" />

        <Button
            android:id="@+id/favorite_btn"
            android:layout_width="0dp"
            style="@style/Theme.AppCompat.Light.NoActionBar"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/midnight_blue"
            favorite="@{movie.favorite}"
            android:textColor="@color/silver"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/movie_poster"
            app:layout_constraintTop_toBottomOf="@id/rate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>